// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-card should render card with context inside 1`] = `
<wpp-card class="wpp-card" exportparts="card, header-outer-wrapper, header-wrapper radio, checkbox, actions-wrapper">
  <mock:shadow-root>
    <div class="card primary size-m" part="card">
      <div class="header-wrapper" part="header-outer-wrapper">
        <div class="header slot-hidden" part="header-wrapper">
          <slot name="header" part="header"></slot>
        </div>
        <div class="actions slot-hidden" part="actions-wrapper">
          <slot name="actions" part="actions"></slot>
        </div>
      </div>
      <slot></slot>
    </div>
  </mock:shadow-root>
  <span>
    test context
  </span>
</wpp-card>
`;

exports[`wpp-card should render card with variant secondary 1`] = `
<wpp-card class="wpp-card" exportparts="card, header-outer-wrapper, header-wrapper radio, checkbox, actions-wrapper" variant="secondary">
  <mock:shadow-root>
    <div class="card secondary size-m" part="card">
      <div class="header-wrapper" part="header-outer-wrapper">
        <div class="header slot-hidden" part="header-wrapper">
          <slot name="header" part="header"></slot>
        </div>
        <div class="actions slot-hidden" part="actions-wrapper">
          <slot name="actions" part="actions"></slot>
        </div>
      </div>
      <slot></slot>
    </div>
  </mock:shadow-root>
  <span>
    test context
  </span>
</wpp-card>
`;
